--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@ application.windows64
 application.macosx
 out
 
+# processing default folder
+examples
+libraries
+modes
+templates
+tools
+
 # sound files
 *.mp3
 *.wav
